--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,8 @@
     },
     "minimum-stability": "dev",
     "extra": {
-        "branch-alias": "0.1-dev"
+        "branch-alias": {
+            "dev-master": "0.1-dev"
+        }
     }
 }
