--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,5 @@
     		"Shopnagru": "src/"
     	}
     },
-    "minimum-stability": "dev",
-    "extra": {
-        "branch-alias": {
-            "dev-master": "0.1-dev"
-        }
-    }
+    "minimum-stability": "dev"
 }
