--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,10 @@
     		"SNR": "src/"
     	}
     },
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "extra": {
+        "branch-alias": {
+            "dev-master": "0.1-dev"
+        }
+    }
 }
